--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@
 	box-sizing: border-box;
 }
 
+body {
+	background-color: #fff;
+}
+
 .top-nav {
 	background: #ccc;
 }
@@ -12,11 +16,27 @@
 	padding: 5px 20px; 
 }
 
+.brand-link {
+	text-decoration: none;
+	color: #000;
+}
+
 .nav-toggle {
 	margin-left: auto;
 	cursor: pointer;
 }
 
+.nav-list li {
+	list-style: none;
+}
+
+.nav-list a {
+	text-decoration: none;
+	color: #000;
+}
+
 .nav-list-collapsed {
 	display: none;
 }
+
+
